Test/typing/should_fail/abstract_and_final_class.java
package toto;

final abstract class A {}